--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
+        android:fontFamily="monospace"
         android:text="Ficby"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:textColor="#ffffff"
         android:textSize="60sp"
-        android:typeface="serif"
         android:visibility="visible"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toRightOf="@+id/app_back"
@@ -37,10 +37,9 @@
         android:layout_width="130dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/button_static"
         android:text="Account"
         android:textSize="22sp"
-        android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_back" />
@@ -49,36 +48,38 @@
         android:id="@+id/beacon_button"
         android:layout_width="130dp"
         android:layout_height="60dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="12dp"
         android:text="Beacon"
         android:textSize="22sp"
-        android:textStyle="bold"
+        android:background="@drawable/button_notpress"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/account_button"
+        app:layout_constraintHorizontal_bias="0.121" />
+
+    <Button
+        android:id="@+id/band_button"
+        android:layout_width="130dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/button_notpress"
+        android:text="MI Band"
+        android:textSize="24sp"
+        app:layout_constraintHorizontal_bias="0.882"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/account_button" />
 
     <Button
-        android:id="@+id/band_button"
-        android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
-        android:text="Band"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/beacon_button" />
-
-    <Button
         android:id="@+id/more_button"
         android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="87dp"
         android:text="MORE"
         android:textSize="24sp"
-        android:textStyle="bold"
+        android:background="@drawable/button_static"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/band_button" />
+        app:layout_constraintTop_toBottomOf="@+id/account_button" />
 
 </android.support.constraint.ConstraintLayout>
