--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:fontFamily="monospace"
-        android:text="Ficby"
+        android:text="F i c b y"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:textColor="#ffffff"
         android:textSize="60sp"
@@ -55,7 +55,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/account_button"
-        app:layout_constraintHorizontal_bias="0.121" />
+        app:layout_constraintHorizontal_bias="0.122"
+        android:layout_marginLeft="8dp" />
 
     <Button
         android:id="@+id/band_button"
@@ -65,16 +66,17 @@
         android:background="@drawable/button_notpress"
         android:text="MI Band"
         android:textSize="24sp"
-        app:layout_constraintHorizontal_bias="0.882"
+        app:layout_constraintHorizontal_bias="0.881"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/account_button" />
+        app:layout_constraintTop_toBottomOf="@+id/account_button"
+        android:layout_marginRight="8dp" />
 
     <Button
         android:id="@+id/more_button"
         android:layout_width="100dp"
         android:layout_height="55dp"
-        android:layout_marginTop="87dp"
+        android:layout_marginTop="82dp"
         android:text="MORE"
         android:textSize="24sp"
         android:background="@drawable/button_static"
