--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -8,7 +8,7 @@
     tools:context="com.dashwood.ficby.ForgetPasswordActivity">
 
     <ImageView
-        android:id="@+id/app_back"
+        android:id="@+id/app_pic"
         android:layout_width="500dp"
         android:layout_height="300dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,7 +25,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@drawable/ficby_forget"
-        app:layout_constraintBottom_toBottomOf="@+id/app_back"
+        app:layout_constraintBottom_toBottomOf="@+id/app_pic"
         android:layout_marginBottom="8dp"
         app:layout_constraintHorizontal_bias="0.51" />
 
@@ -46,7 +46,7 @@
         android:textColorHint="@android:color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_back" />
+        app:layout_constraintTop_toBottomOf="@+id/app_pic" />
 
     <Button
         android:id="@+id/btn_reset"
@@ -55,6 +55,7 @@
         android:layout_marginTop="14dp"
         android:background="@drawable/button_default"
         android:text="寄送重設密碼信!"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -68,7 +69,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="2dp"
-        app:layout_constraintTop_toBottomOf="@+id/app_back"
+        app:layout_constraintTop_toBottomOf="@+id/app_pic"
         android:visibility="gone"/>
 
 
