--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context="com.dashwood.ficby.MainActivity">
 
     <ImageView
-        android:id="@+id/app_back"
+        android:id="@+id/app_pic"
         android:layout_width="500dp"
         android:layout_height="300dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -28,9 +28,9 @@
         android:textSize="90sp"
         android:visibility="visible"
         app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintLeft_toRightOf="@+id/app_back"
-        app:layout_constraintRight_toLeftOf="@+id/app_back"
-        app:layout_constraintTop_toTopOf="@+id/app_back" />
+        app:layout_constraintLeft_toRightOf="@+id/app_pic"
+        app:layout_constraintRight_toLeftOf="@+id/app_pic"
+        app:layout_constraintTop_toTopOf="@+id/app_pic" />
 
     <Button
         android:id="@+id/account_button"
@@ -42,7 +42,7 @@
         android:textSize="22sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_back" />
+        app:layout_constraintTop_toBottomOf="@+id/app_pic" />
 
     <Button
         android:id="@+id/beacon_button"
@@ -88,13 +88,13 @@
         android:id="@+id/version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="0dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginRight="1dp"
         android:text="Version: 1.0"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.943"
+        app:layout_constraintHorizontal_bias="0.936"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
