--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -8,7 +8,7 @@
     tools:context="com.dashwood.ficby.SignupActivity">
 
     <ImageView
-        android:id="@+id/app_back"
+        android:id="@+id/app_pic"
         android:layout_width="500dp"
         android:layout_height="300dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -25,7 +25,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@drawable/ficby_signup"
-        app:layout_constraintTop_toTopOf="@+id/app_back"
+        app:layout_constraintTop_toTopOf="@+id/app_pic"
         android:layout_marginTop="200dp"
         app:layout_constraintHorizontal_bias="0.852" />
 
@@ -38,15 +38,15 @@
         android:layout_marginRight="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="15dp"
-        android:hint="帳號: E-Mail"
         android:gravity="center"
-        android:maxLines="1"
+        android:hint="帳號: Mail"
         android:inputType="textEmailAddress"
+        android:maxLines="1"
         android:textColor="@android:color/white"
         android:textColorHint="@android:color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_back" />
+        app:layout_constraintTop_toBottomOf="@+id/app_pic" />
 
     <EditText
         android:id="@+id/password_input"
@@ -77,6 +77,7 @@
         android:background="@drawable/button_default"
         android:text="註冊帳號"
         android:textColor="@android:color/black"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.465"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -90,6 +91,7 @@
         android:layout_marginTop="15dp"
         android:background="@drawable/button_default"
         android:text="已經有帳號?  返回登入頁面!"
+        android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -102,7 +104,7 @@
         android:layout_height="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/app_back"
+        app:layout_constraintTop_toTopOf="@+id/app_pic"
         android:layout_marginTop="243dp"
         app:layout_constraintHorizontal_bias="0.51"
         android:visibility="gone"/>
