Fix Account system FC bug

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -22,12 +22,28 @@
         android:id="@+id/forget_pic"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/app_pic"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/ficby_forget"
-        app:layout_constraintBottom_toBottomOf="@+id/app_pic"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.51" />
+        app:srcCompat="@drawable/circle_forget" />
+
+    <TextView
+        android:id="@+id/forget_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="忘記密碼"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        app:layout_constraintLeft_toLeftOf="@+id/forget_pic"
+        app:layout_constraintRight_toRightOf="@+id/forget_pic"
+        app:layout_constraintTop_toTopOf="@+id/forget_pic"
+        app:layout_constraintBottom_toBottomOf="@+id/forget_pic"
+        android:layout_marginBottom="8dp" />
 
     <EditText
         android:id="@+id/email_input"
@@ -55,7 +71,7 @@
         android:layout_marginTop="14dp"
         android:background="@drawable/button_default"
         android:text="寄送重設密碼信!"
-        android:textSize="18sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
