--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -22,12 +22,28 @@
         android:id="@+id/signup_pic"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginTop="200dp"
+        app:layout_constraintHorizontal_bias="0.852"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/ficby_signup"
         app:layout_constraintTop_toTopOf="@+id/app_pic"
-        android:layout_marginTop="200dp"
-        app:layout_constraintHorizontal_bias="0.852" />
+        app:srcCompat="@drawable/circle_signup" />
+
+    <TextView
+        android:id="@+id/sign_up_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="註冊"
+        android:textColor="#ffffff"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="@+id/signup_pic"
+        app:layout_constraintLeft_toLeftOf="@+id/signup_pic"
+        app:layout_constraintRight_toRightOf="@+id/signup_pic"
+        app:layout_constraintTop_toTopOf="@+id/signup_pic" />
 
     <EditText
         android:id="@+id/email_input"
@@ -39,7 +55,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="15dp"
         android:gravity="center"
-        android:hint="帳號: Mail"
+        android:hint="帳號:  Mail"
         android:inputType="textEmailAddress"
         android:maxLines="1"
         android:textColor="@android:color/white"
@@ -77,7 +93,7 @@
         android:background="@drawable/button_default"
         android:text="註冊帳號"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.465"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -86,12 +102,12 @@
 
     <Button
         android:id="@+id/btn_backtologin"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/button_default"
         android:text="已經有帳號?  返回登入頁面!"
-        android:textSize="16sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
