--- a/app/src/main/res/layout/activity_band.xml
+++ b/app/src/main/res/layout/activity_band.xml
@@ -4,6 +4,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#263238"
     tools:context="com.dashwood.ficby.BandActivity">
+
+    <ImageView
+        android:id="@+id/band_pic"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/band_back_pic" />
+
+    <TextView
+        android:id="@+id/band_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="53dp"
+        android:gravity="center"
+        android:text="健康數據\n監測"
+        android:textColor="#ffffff"
+        android:textSize="40sp"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/band_pic" />
+
+    <HorizontalScrollView
+        android:id="@+id/line_chart_base"
+        android:layout_width="350dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="11dp"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/band_pic">
+
+        <view
+            android:id="@+id/line_view"
+            class="im.dacer.androidcharts.LineView"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp" />
+
+    </HorizontalScrollView>
+
+    <Button
+        android:id="@+id/btn_draw_line_chart"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/button_default"
+        android:text="產生圖表"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/line_chart_base" />
+
 
 </android.support.constraint.ConstraintLayout>
