--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -8,7 +8,7 @@
     tools:context="com.dashwood.ficby.ForgetPasswordActivity">
 
     <ImageView
-        android:id="@+id/app_pic"
+        android:id="@+id/band_pic"
         android:layout_width="500dp"
         android:layout_height="300dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -22,12 +22,12 @@
         android:id="@+id/forget_pic"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/app_pic"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/circle_forget" />
+        app:srcCompat="@drawable/circle_forget"
+        app:layout_constraintTop_toTopOf="@+id/band_pic"
+        android:layout_marginTop="200dp" />
 
     <TextView
         android:id="@+id/forget_text"
@@ -62,7 +62,7 @@
         android:textColorHint="@android:color/white"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_pic" />
+        app:layout_constraintTop_toBottomOf="@+id/band_pic" />
 
     <Button
         android:id="@+id/btn_reset"
@@ -85,7 +85,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="2dp"
-        app:layout_constraintTop_toBottomOf="@+id/app_pic"
+        app:layout_constraintTop_toBottomOf="@+id/band_pic"
         android:visibility="gone"/>
 
 
