--- a/app/src/main/res/layout/activity_scan_bt.xml
+++ b/app/src/main/res/layout/activity_scan_bt.xml
@@ -21,11 +21,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
-        android:text="掃描到的藍牙設備"
+        android:text="搜尋藍芽設備...(請選擇MI1S)"
         android:textColor="#ffffff"
-        android:textSize="24sp"
+        android:gravity="center"
+        android:textSize="22sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scan_bt_pic" />
+
+    <ListView
+        android:id="@+id/bt_device_list"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scan_text" />
 
 </android.support.constraint.ConstraintLayout>
