--- a/app/src/main/res/layout/activity_beacon.xml
+++ b/app/src/main/res/layout/activity_beacon.xml
@@ -7,37 +7,130 @@
     android:background="#bdbdbd"
     tools:context="com.dashwood.ficby.BeaconActivity">
 
-    <ImageView
-        android:id="@+id/beacon_range_pic"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintHorizontal_bias="0.069"
+    <FrameLayout
+        android:id="@+id/root"
+        android:layout_width="0dp"
+        android:layout_height="350dp"
+        android:layout_marginBottom="9dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        tools:layout_constraintLeft_creator="1"></FrameLayout>
+
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="0dp"
+        android:layout_height="500dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="176dp"
+        android:transitionGroup="false"
+        android:visibility="invisible"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/beacon_search" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
 
     <ImageView
         android:id="@+id/beacon_pic"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/beacon_circle" />
+        app:srcCompat="@mipmap/beacon_circle" />
+
+    <Button
+        android:id="@+id/btn_scan"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:background="@drawable/button_default"
+        android:text="SCAN"
+        android:textSize="20sp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.469"
+        app:layout_constraintLeft_toRightOf="@+id/beacon_pic"
+        android:layout_marginLeft="39dp"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toTopOf="@+id/list"
+        android:layout_marginStart="39dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginTop="64dp"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="62dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/connect_pic"
+        android:id="@+id/blue_beacon"
+        android:layout_width="50dp"
+        android:layout_height="75dp"
+        android:layout_marginTop="117dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_scan"
+        app:srcCompat="@mipmap/blue_beacon"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
+
+    <ImageView
+        android:id="@+id/purple_beacon"
+        android:layout_width="50dp"
+        android:layout_height="0dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintBottom_toBottomOf="@+id/green_beacon"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/green_beacon"
+        app:srcCompat="@mipmap/purple_beacon"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintTop_creator="1" />
+
+    <ImageView
+        android:id="@+id/green_beacon"
+        android:layout_width="50dp"
+        android:layout_height="75dp"
+        android:layout_marginBottom="33dp"
+        android:layout_marginEnd="26dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@mipmap/green_beacon"
+        tools:layout_constraintRight_creator="1" />
+
+    <ImageView
+        android:id="@+id/locate"
+        android:layout_width="50dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="142dp"
+        android:layout_marginTop="144dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/blue_beacon"
+        app:srcCompat="@mipmap/locate_people"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
+
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="2dp"
-        android:layout_marginTop="67dp"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toRightOf="@+id/beacon_range_pic"
-        app:layout_constraintRight_toLeftOf="@+id/beacon_pic"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/transfer_horizon" />
+        android:text="TextView"
+        android:textColor="#000000"
+        android:layout_marginLeft="5dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="@+id/list" />
+
 </android.support.constraint.ConstraintLayout>
