--- a/app/src/main/res/layout/activity_scan_bt.xml
+++ b/app/src/main/res/layout/activity_scan_bt.xml
@@ -14,7 +14,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/scan_bt_pic" />
+        app:srcCompat="@mipmap/scan_bt_pic" />
 
     <TextView
         android:id="@+id/scan_text"
