--- a/app/src/main/res/layout/activity_beacon.xml
+++ b/app/src/main/res/layout/activity_beacon.xml
@@ -25,7 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="500dp"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="176dp"
+        android:layout_marginTop="208dp"
         android:transitionGroup="false"
         android:visibility="invisible"
         app:layout_constraintHorizontal_bias="0.0"
@@ -39,40 +39,33 @@
         android:id="@+id/beacon_pic"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/beacon_circle" />
+        app:srcCompat="@mipmap/beacon_circle"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/btn_scan"
-        android:layout_width="0dp"
+        android:layout_width="1\50dp"
         android:layout_height="50dp"
+        android:layout_marginTop="155dp"
         android:background="@drawable/button_default"
         android:text="SCAN"
         android:textSize="20sp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.469"
-        app:layout_constraintLeft_toRightOf="@+id/beacon_pic"
-        android:layout_marginLeft="39dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/list"
-        android:layout_marginStart="39dp"
-        android:layout_marginEnd="35dp"
-        android:layout_marginTop="64dp"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="62dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
         android:id="@+id/blue_beacon"
         android:layout_width="50dp"
         android:layout_height="75dp"
-        android:layout_marginTop="117dp"
+        android:layout_marginTop="53dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_scan"
@@ -102,15 +95,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@mipmap/green_beacon"
-        tools:layout_constraintRight_creator="1" />
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginRight="16dp" />
 
     <ImageView
         android:id="@+id/locate"
         android:layout_width="50dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="142dp"
-        android:layout_marginTop="144dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="121dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/blue_beacon"
@@ -126,11 +118,10 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textColor="#000000"
-        android:layout_marginLeft="5dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toTopOf="@+id/list" />
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toTopOf="@+id/list"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
