--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -27,7 +27,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/band_pic"
-        app:srcCompat="@drawable/circle_signup" />
+        app:srcCompat="@mipmap/circle_signup" />
 
     <TextView
         android:id="@+id/sign_up_text"
