--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -22,12 +22,12 @@
         android:id="@+id/forget_pic"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginTop="200dp"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:srcCompat="@drawable/circle_forget"
         app:layout_constraintTop_toTopOf="@+id/band_pic"
-        android:layout_marginTop="200dp" />
+        app:srcCompat="@mipmap/circle_forget" />
 
     <TextView
         android:id="@+id/forget_text"
