--- a/app/src/main/res/layout/activity_scan_bt.xml
+++ b/app/src/main/res/layout/activity_scan_bt.xml
@@ -10,7 +10,7 @@
         android:id="@+id/scan_bt_pic"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,20 +20,24 @@
         android:id="@+id/scan_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
-        android:text="搜尋藍芽設備...(請選擇MI1S)"
-        android:textColor="#ffffff"
+        android:layout_marginTop="10dp"
         android:gravity="center"
+        android:text="搜尋中..."
+        android:textColor="#ffffff"
         android:textSize="22sp"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scan_bt_pic" />
 
-    <ListView
-        android:id="@+id/bt_device_list"
+    <TextView
+        android:id="@+id/bt_device_text"
         android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="15dp"
+        android:gravity="center_horizontal"
+        android:textColor="#ffffff"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scan_text" />
